Submission Notification Overflow Bug Removed

--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,10 @@ a:active {
     text-decoration: none;
 }
 
+body {
+    overflow-x: hidden;
+}
+
 .clear {
     clear: both;
     display: block;
